src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__chr.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc()]\nfn chr(a: i32) -> Result<String, EvalError> {\n    let codepoint = u32::try_from(a)\n        .map_err(|_| EvalError::CharacterTooLargeForEncoding(a))?;\n    if codepoint == 0 {\n        Err(EvalError::NullCharacterNotPermitted)\n    } else if 0xd800 <= codepoint && codepoint < 0xe000 {\n        Err(EvalError::CharacterNotValidForEncoding(a))\n    } else {\n        char::from_u32(codepoint)\n            .map(|u| u.to_string())\n            .ok_or(EvalError::CharacterTooLargeForEncoding(a))\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Chr;
impl crate::func::EagerUnaryFunc for Chr {
    type Input<'a> = i32;
    type Output<'a> = Result<String, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        chr(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Chr {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(chr))
    }
}
fn chr(a: i32) -> Result<String, EvalError> {
    let codepoint = u32::try_from(a)
        .map_err(|_| EvalError::CharacterTooLargeForEncoding(a))?;
    if codepoint == 0 {
        Err(EvalError::NullCharacterNotPermitted)
    } else if 0xd800 <= codepoint && codepoint < 0xe000 {
        Err(EvalError::CharacterNotValidForEncoding(a))
    } else {
        char::from_u32(codepoint)
            .map(|u| u.to_string())
            .ok_or(EvalError::CharacterTooLargeForEncoding(a))
    }
}
